src/test/ui-fulldeps/plugin-import.stderr
error: cannot import a built-in macro
  --> $DIR/plugin-import.rs:8:5
   |
LL | use empty as full;
   |     ^^^^^^^^^^^^^

error: aborting due to previous error

